# services/movie/docs/swagger.json
@@ -16,6 +16,11 @@
     "paths": {
         "/create": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a new movie",
                 "consumes": [
                     "application/json"
@@ -26,6 +31,13 @@
                 "summary": "Create a new movie",
                 "operationId": "create-movie",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Movie object to be created",
                         "name": "movie",
@@ -78,6 +90,11 @@
         },
         "/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get movie information by ID",
                 "produces": [
                     "application/json"
@@ -90,6 +107,13 @@
                         "description": "ID of the movie",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
